order-cancellation/demo/deployment/auditor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-auditor
  namespace: order
  labels:
    app: order-auditor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-auditor
  template:
    metadata:
      labels:
        app: order-auditor
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "order-auditor"
        dapr.io/app-protocol: "http"
        dapr.io/app-port: "3001"
        dapr.io/config: "order-config"
        dapr.io/log-as-json: "true"
    spec:
      containers:
      - name: auditor
        image: mchmarny/auditor:v0.2.10
        ports:
        - containerPort: 3001
