order-cancellation/demo/deployment/workflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflows-host
  namespace: order
  labels:
    app: workflows-host
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflows-host
  template:
    metadata:
      labels:
        app: workflows-host
      annotations:
        dapr.io/app-id: "workflows"
        dapr.io/enabled: "true"
        dapr.io/app-port: "50003"
        dapr.io/app-protocol: "grpc"
        dapr.io/config: "order-config"
        dapr.io/log-level: "debug"
        dapr.io/log-as-json: "true"
    spec:
      containers:
      - name: host
        image: daprio/workflows:0.2.2
        command: ["dotnet"]
        args: ["app/Dapr.Workflows.dll", "--workflows-path", "/workflows"]
        ports:
        - containerPort: 50003
        imagePullPolicy: Always
        volumeMounts:
        - name: workflows
          mountPath: /workflows
      volumes:
        - name: workflows
          configMap:
            name: workflows
