order-cancellation/demo/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: order-ingress-rules
  namespace: order
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:  
      - order.demo.dapr.team
      secretName: tls-secret
  rules:
    - host: order.demo.dapr.team
      http:
        paths:
          - path: /
            backend:
              serviceName: order-viewer
              servicePort: 80
